# cellpose-fork

./: CLAUDE.md  fork-changes.md  pyproject.toml
cellpose/: __init__.py  __main__.py  cli.py  core.py  denoise.py  dynamics.py  io.py  models.py  plot.py  train.py  transforms.py  utils.py  version.py  vit_sam.py
cellpose/contrib/: distributed_segmentation.py
cellpose/gui/: filebrowser.py  gui.py  gui3d.py  guiparts.py  io.py  make_train.py  menus.py
paper/3.0/: train_subsets.py
