[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpose"
dynamic = ["version"]
description = "anatomical segmentation algorithm"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "Marius Pachitariu and Carsen Stringer", email = "stringerc@janelia.hhmi.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy",
    "natsort",
    "tifffile",
    "tqdm",
    "torch>=1.6",
    "torchvision",
    "opencv-python-headless",
    "fastremap",
    "imagecodecs",
    "roifile",
    "fill-voids",
    "segment_anything",
]

[project.optional-dependencies]
image = [
    "nd2",
    "pynrrd",
]
gui = [
    "pyqtgraph>=0.12.4",
    "pyqt6",
    "pyqt6.sip",
    "qtpy",
    "superqt",
]
docs = [
    "sphinx>=3.0",
    "sphinxcontrib-apidoc",
    "sphinx_rtd_theme",
    "sphinx-argparse",
]
distributed = [
    "dask",
    "distributed",
    "dask_image",
    "pyyaml",
    "zarr",
    "dask_jobqueue",
    "bokeh",
    "pyarrow",
]
bioimageio = [
    "bioimageio.core",
]
all = [
    "cellpose[gui,distributed,image,bioimageio]",
]

[project.urls]
Homepage = "https://github.com/MouseLand/cellpose"

[project.scripts]
cellpose = "cellpose.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "notebooks*", "paper*"]

[tool.setuptools_scm]
