[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpose"
dynamic = ["version"]
description = "anatomical segmentation algorithm"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "Marius Pachitariu and Carsen Stringer", email = "stringerc@janelia.hhmi.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
    "natsort>=8.0",
    "tifffile",
    "tqdm>=4.60",
    "torch>=2.0",
    "torchvision>=0.15",
    "opencv-python-headless>=4.8",
    "fastremap",
    "imagecodecs",
    "roifile",
    "fill-voids",
    "segment_anything",
]

[project.optional-dependencies]
image = [
    "nd2",
    "pynrrd",
]
gui = [
    "pyqtgraph>=0.13",
    "pyqt6",
    "pyqt6.sip",
    "qtpy",
    "superqt",
]
docs = [
    "sphinx>=7.0",
    "sphinxcontrib-apidoc",
    "sphinx_rtd_theme",
    "sphinx-argparse",
]
distributed = [
    "dask",
    "distributed",
    "dask_image",
    "pyyaml",
    "zarr",
    "dask_jobqueue",
    "bokeh",
    "pyarrow",
]
bioimageio = [
    "bioimageio.core",
]
all = [
    "cellpose[gui,distributed,image,bioimageio]",
]

[project.urls]
Homepage = "https://github.com/MouseLand/cellpose"

[project.scripts]
cellpose = "cellpose.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "notebooks*", "paper*"]

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E402",  # module-import-not-at-top (common in scientific code with conditional imports)
    "E501",  # line-too-long (enforced by formatter, not linter)
    "E741",  # ambiguous variable names (l, O, I — common in math/numpy code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
